[metadata]
name = IGLOO
version = 0.0.4
author = Bart Geurten, Ilyas Kuhlemann
author_email = bgeurte@gwdg.de, ikuhlem@gwdg.de
description = IGLOO Model that estimates the behaviour of individual Drosophila in temperature gradients.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zerotonin/igloo
project_urls =
    Bug Tracker = https://github.com/zerotonin/igloo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    scipy
    matplotlib
    tqdm